
Moqui Framework Release Notes

===========================================================================
Release 1.6.2 - TBD
===========================================================================

Moqui Framework 1.6.2 is a minor new feature and bug fix release.

TODO

New Features


Bug Fixes


===========================================================================
Release 1.6.1 - 24 Jan 2016
===========================================================================

Moqui Framework 1.6.1 is a minor new feature and bug fix release.

This is the first release after the repository reorganization in Moqui 
Ecosystem. The runtime directory is now in a separate repository. The 
framework build now gets JAR files from Bintray JCenter instead of having
them in the framework/lib directory. Overall the result is a small
foundation with additional libraries, components, etc added as needed using
Gradle tasks.

Build Changes

- Gradle tasks to help handle runtime directory in a separate repository
  from Moqui Framework
- Added component management features as Gradle tasks
  - Components available configured in addons.xml
  - Repositories components come from configured in addons.xml
  - Get component from current or release archive (getCurrent, getRelease)
  - Get component from git repositories (getGit)
  - When getting a component, automatically gets all components it depends
    on (must be configured in addons.xml so it knows where to get them)
  - Do a git pull for moqui, runtime, and all components
- Most JAR files removed, framework build now uses Bintray JCenter
- JAR files are downloaded as needed on build
- For convenience in IDEs to copy JAR files to the framework/dependencies
  directory use: gradle framework:copyDependencies; note that this is not
  necessary in IntelliJ IDEA (will import dependencies when creating a new
  project based on the gradle files, use the refresh button in the Gradle
  tool window to update after updating moqui)